feat: delete old user files
